<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87DFD6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:background="#086972"
        android:backgroundTint="#086972"
        android:text=" Your CV "
        android:textColor="#FDFDFD"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/NameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/AgeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/NameTV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/age"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/JobTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/AgeTV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/job"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/PhoneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/JobTV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/EmailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/PhoneTV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/e_mail"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/NameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/NameTV"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#FBFD8A"
        android:ems="10"
        android:hint="@string/NameEmpty"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/AgeET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/AgeTV"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:backgroundTint="#FBFD8A"
        android:ems="10"
        android:hint="  "
        android:inputType="number" />

    <EditText
        android:id="@+id/JobET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/JobTV"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:backgroundTint="#FBFD8A"
        android:ems="10"
        android:hint="  "
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/PhoneET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/PhoneTV"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#FBFD8A"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/EmailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/EmailTV"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#FBFD8A"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <ImageView
        android:id="@+id/PFP"
        android:layout_width="110dp"
        android:layout_height="119dp"
        android:layout_alignStart="@id/NameTV"
        android:layout_marginStart="271dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/profile_pic" />

    <Button
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/EmailET"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#01A9B4"
        android:text="Next" />

    <Button
        android:id="@+id/Upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/PFP"
        android:layout_alignTop="@id/PFP"
        android:layout_marginStart="11dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="#01A9B4"
        android:text="Upload" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="206dp"
        android:layout_height="194dp"
        android:layout_alignStart="@id/Next"
        android:layout_alignTop="@id/Next"
        android:layout_marginStart="84dp"
        android:layout_marginTop="-27dp"
        app:srcCompat="@drawable/ddd" />

</RelativeLayout>